Small update to index

--- a/index.html
+++ b/index.html
@@ -103,5 +103,7 @@
 	</main> <!-- cd-main-content -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src="js/main.js"></script> <!-- Resource jQuery -->
+
+	<!-- Updated Nov 8 2019 -->
 </body>
 </html>
